--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,31 @@
+html {
+  height: 100%;
+}
+
+#root {
+  display: grid;
+  grid-template-rows: 1fr auto;
+  background-color: #F8F8F8;
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.Main-content {
+  flex: 1 0 auto;
+  margin: 0 auto;
+  max-width: 650px;
+}
+
 .App {
   text-align: center;
-  background-color: #F8F8F8;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .App-logo {
