--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -3,7 +3,8 @@ footer {
   background-color: black;
   padding: 20px 0;
   margin-top: 20px;
-
+  grid-row-start: 2;
+  grid-row-end: 3;
   .footerContent {
     font-size: 15px;
     color: white;
